--- a/dwca_config/field_mapping/dwca_terms_event.yaml
+++ b/dwca_config/field_mapping/dwca_terms_event.yaml
@@ -221,6 +221,8 @@ dwcaEventContent:
                         sourceKey: upper_mesh_size_um
                     -   dynamicKey: LowerMeshSize(um)
                         sourceKey: lower_mesh_size_um
+                    -   dynamicKey: FactorsInfluencingCode
+                        sourceKey: factors_influencing_code
             eventDate:
                 sourceKeyList: 
                     - sample_date
