Filters and translate added.

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,13 @@
 
-# **/*.zip
+**/*.zip
+**/*.xlsx
 **/.svn
 .project
 .pydevproject
 .settings
 test_data/TMP_DarwinCore
+
+**/*OLD*
 
 
 # Byte-compiled / optimized / DLL files
