--- a/dwca_config/dwca_zooplankton_nat.yaml
+++ b/dwca_config/dwca_zooplankton_nat.yaml
@@ -3,11 +3,9 @@
 # GitHub: https://github.com/sharkdata/darwincore
 
 info: 
-    title: DwC-A configurations for zooplankton - national.
-    yamlFile: dwca_zooplankton_nat.yaml
+    title: DwC-A configurations for zooplankton - national monitoring
     description:
-        Used to generate DarwinCore-Archive files from 
-        SHARK zip files.
+        Used to generate DarwinCore-Archive files from SHARK zip files.
 
 dwcaTarget:
     directory:
@@ -58,10 +56,12 @@ translate:
         data_in/resources
     files:
         - translate.txt
+        - translate_zooplankton.txt
 
 filters:
     directory:
         data_in/resources
     files:
-        - filters.txt
+        # - filters.txt
+        - filters_TEST.txt
 
