--- a/dwca_config/field_mapping/dwca_terms_event.yaml
+++ b/dwca_config/field_mapping/dwca_terms_event.yaml
@@ -56,7 +56,7 @@ dwcaEventContent:
     -   eventType: sampling_event
         dwcTerms:
             id:
-                sourceKey: 
+                sourceKey:  sampling_event_key
             eventID:
                 sourceKey: sampling_event_key
             parentEventID:
