--- a/dwca_config/field_mapping/dwca_terms_occurrence.yaml
+++ b/dwca_config/field_mapping/dwca_terms_occurrence.yaml
@@ -44,7 +44,8 @@ dwcaOccurrenceColumns:
 dwcaOccurrenceContent:
     -   eventType: occurrence
         dwcTerms:
-            # id: 
+            id: 
+                dwcaKey: sample_key
             eventID:
                 dwcaKey: sample_key
             occurrenceID:
