--- a/dwca_config/eml_metadata/eml_phytoplankton_nat.yaml
+++ b/dwca_config/eml_metadata/eml_phytoplankton_nat.yaml
@@ -30,7 +30,7 @@ dataset:
     coverage: 
         geographicCoverage: 
             geographicDescription: 
-                "Data are collected within the following marine ecoregions: http://marineregions.org/mrgid/2401"
+                "Data are collected within the following marine ecoregions: http://marineregions.org/mrgid/2401, http://marineregions.org/mrgid/2374, http://marineregions.org/mrgid/2379"
         # taxonomicCoverage: 
         #     phylum: ????
 
