--- a/dwca_config/eml_metadata/eml_phytoplankton_nat.yaml
+++ b/dwca_config/eml_metadata/eml_phytoplankton_nat.yaml
@@ -19,7 +19,16 @@ dataset:
 
     abstract: 
         para: 
-            -   Phytoplankton have been monitored in Sweden since 1983. 
+            -   Phytolankton have been monitored in Sweden since 1983. 
+            -   The national monitoring program was initiated by the Swedish Environmental Protection Agency and is now financed by the Swedish Agency for Marine and Water Management. 
+                Monitoring is performed by Stockholm University, Swedish Meteorological and Hydrological Institute, Gothenburg University and Umeå University. 
+            -   Data are stored in the Swedish Ocean Archive database (SHARK), by the Swedish Meteorological and Hydrological Institute. Data are collected and analyzed according to the 
+                HELCOM COMBINE Manual - Part C Annex C6 Monitoring of phytoplankton species composition, abundance and biomass (https://github.com/sharkdata/darwincore/edit/master/dwca_config/eml_metadata/eml_phytoplankton_nat.yaml) or similar methods. 
+            -   "Mesozooplankton constitute an important part of zooplankton in the pelagic food webs, since these are the organisms representing the link between primary producers (phytoplankton) 
+                and higher trophic levels (zooplanktivorous fish and invertebrates).[...] The sampling of mesozooplankton serves [...] to describe the species composition and the spatial distribution of 
+                mesozooplankton abundance and biomass. (HELCOM COMBINE Manual https://helcom.fi/media/publications/Guidelines-for-monitoring-of-mesozooplankton.pdf). 
+            -   Information about the program and the methods are also available in Swedish at 
+                https://www.havochvatten.se/hav/vagledning--lagar/vagledningar/ovriga-vagledningar/undersokningstyper-for-miljoovervakning/undersokningstyper/djurplankton-trend--och-omradesovervakning.html
 
     methods: 
         methodStep: 
