--- a/dwca_config/eml_metadata/eml_phytoplankton_nat.yaml
+++ b/dwca_config/eml_metadata/eml_phytoplankton_nat.yaml
@@ -24,9 +24,11 @@ dataset:
                 Monitoring is performed by Stockholm University, Swedish Meteorological and Hydrological Institute, Gothenburg University and Umeå University. 
             -   Data are stored in the Swedish Ocean Archive database (SHARK), by the Swedish Meteorological and Hydrological Institute. Data are collected and analyzed according to the 
                 HELCOM COMBINE Manual - Part C Annex C6 Monitoring of phytoplankton species composition, abundance and biomass (https://www.helcom.fi/wp-content/uploads/2019/08/Guidelines-for-monitoring-phytoplankton-species-composition-abundance-and-biomass.pdf) or similar methods. 
-            -   "Mesozooplankton constitute an important part of zooplankton in the pelagic food webs, since these are the organisms representing the link between primary producers (phytoplankton) 
-                and higher trophic levels (zooplanktivorous fish and invertebrates).[...] The sampling of mesozooplankton serves [...] to describe the species composition and the spatial distribution of 
-                mesozooplankton abundance and biomass. (HELCOM COMBINE Manual https://helcom.fi/media/publications/Guidelines-for-monitoring-of-mesozooplankton.pdf). 
+            -   "In short, analysis of phytoplankton species composition, abundance and biomass is carried out for the following purposes 
+            • to describe temporal trends in phytoplankton species composition, phytoplankton abundance, biomass as well as the intensity and occurrence of blooms 
+            • to describe the spatial distribution of phytoplankton species 
+            • to identify key phytoplankton species (e.g. dominating, harmful, potential non-indigenous and/or invasive species, as well as indicator species) 
+            • to provide basic data for complex ecosystem analyses, food web studies, modelling as well as political and social requirements such as indicators in the frame of the Marine Strategy Framework Directive of the European Union (MSFD; European Union 2008) and the EU Water Framework Directive (WFD; European Union 2000).” (HELCOM COMBINE Manual https://www.helcom.fi/wp-content/uploads/2019/08/Guidelines-for-monitoring-phytoplankton-species-composition-abundance-and-biomass.pdf)
             -   Information about the program and the methods are also available in Swedish at https://www.havochvatten.se/vagledning-foreskrifter-och-lagar/vagledningar/ovriga-vagledningar/undersokningstyper-for-miljoovervakning/undersokningstyper/vaxtplankton.html
 
     methods: 
