--- a/dwca_config/eml_metadata/eml_zoobenthos_nat.yaml
+++ b/dwca_config/eml_metadata/eml_zoobenthos_nat.yaml
@@ -44,8 +44,7 @@ dataset:
         geographicCoverage: 
             geographicDescription: 
                 "Data are collected within the following marine ecoregions: http://marineregions.org/mrgid/2401, http://marineregions.org/mrgid/2374, http://marineregions.org/mrgid/2379"
-        taxonomicCoverage: 
-                            Phylum
+        taxonomicCoverage: Phylum:
                             Annelida
                             Priapulida
                             Mollusca
