--- a/dwca_config/eml_metadata/eml_ringedseal_nat.yaml
+++ b/dwca_config/eml_metadata/eml_ringedseal_nat.yaml
@@ -54,10 +54,7 @@ dataset:
             givenName: SHARK
             surName: SMHI
         organizationName: 
-            Swedish Museum of Natural History, 
-            Swedish Agency for Marine and Water Management, 
-            Swedish Environmental Protection Agency and 
-            Swedish Meteorological and Hydrological Institute.
+            Swedish Meteorological and Hydrological Institute
 
     metadataProvider: 
         individualName: 
