--- a/dwca_config/eml_metadata/eml_zooplankton_nat.yaml
+++ b/dwca_config/eml_metadata/eml_zooplankton_nat.yaml
@@ -21,20 +21,20 @@ dataset:
             -   Zooplankton have been monitored in Sweden since 1979. 
             -   The national monitoring program was initiated by the Swedish Environmental Protection Agency and is now financed by the Swedish Agency for Marine and Water Management. 
                 Monitoring is performed by Stockholm University, Umeå University, Swedish Meteorological and Hydrological Institute and Gothenburg University. 
-            -   Data are stored in the Swedish Ocean Archive database (SHARK), by the Swedish Meteorological and Hydrological Institute. Data are collected and analyzed according to the 
-                HELCOM COMBINE Manual - Part C Annex C7 Mesozooplankton (https://helcom.fi/media/publications/Guidelines-for-monitoring-of-mesozooplankton.pdf) or similar methods. 
-            -   "Mesozooplankton constitute an important part of zooplankton in the pelagic food webs, since these are the organisms representing the link between primary producers (phytoplankton) 
+            -   'Data are stored in the Swedish Ocean Archive database (SHARK), by the Swedish Meteorological and Hydrological Institute. Data are collected and analyzed according to the 
+                HELCOM COMBINE Manual - Part C Annex C7 Mesozooplankton (https://helcom.fi/media/publications/Guidelines-for-monitoring-of-mesozooplankton.pdf) or similar methods. '
+            -   '"Mesozooplankton constitute an important part of zooplankton in the pelagic food webs, since these are the organisms representing the link between primary producers (phytoplankton) 
                 and higher trophic levels (zooplanktivorous fish and invertebrates).[...] The sampling of mesozooplankton serves [...] to describe the species composition and the spatial distribution of 
-                mesozooplankton abundance and biomass" (HELCOM COMBINE Manual https://helcom.fi/media/publications/Guidelines-for-monitoring-of-mesozooplankton.pdf). 
-            -   Information about the program and the methods are also available in Swedish at 
-                https://www.havochvatten.se/vagledning-foreskrifter-och-lagar/vagledningar/ovriga-vagledningar/undersokningstyper-for-miljoovervakning/undersokningstyper/djurplankton-trend--och-omradesovervakning.html
+                mesozooplankton abundance and biomass" (HELCOM COMBINE Manual https://helcom.fi/media/publications/Guidelines-for-monitoring-of-mesozooplankton.pdf). '
+            -   'Information about the program and the methods are also available in Swedish at 
+                https://www.havochvatten.se/vagledning-foreskrifter-och-lagar/vagledningar/ovriga-vagledningar/undersokningstyper-for-miljoovervakning/undersokningstyper/djurplankton-trend--och-omradesovervakning.html'
 
     methods: 
         methodStep: 
             description: 
                 para:
-                    -   Data are collected and analyzed according to the HELCOM COMBINE Manual - Part C Annex C7 Mesozooplankton 
-                        (https://helcom.fi/media/publications/Guidelines-for-monitoring-of-mesozooplankton.pdf) or similar methods. 
+                    -   'Data are collected and analyzed according to the HELCOM COMBINE Manual - Part C Annex C7 Mesozooplankton 
+                        (https://helcom.fi/media/publications/Guidelines-for-monitoring-of-mesozooplankton.pdf) or similar methods. '
         sampling: 
             description:
                 Samples are taken with vertical hauls using a WP-2 net. The samples are preserved and subsequently analyzed using microscopy. 
@@ -42,19 +42,34 @@ dataset:
     coverage: 
         geographicCoverage: 
             geographicDescription: 
-                "Data are collected within the following marine ecoregions: http://marineregions.org/mrgid/2401, http://marineregions.org/mrgid/2374, http://marineregions.org/mrgid/2379"
-        taxonomicCoverage: 
-            phylum:Arthropoda, phylum:Protozoa, phylum incertae sedisphylum, phylum:Rotifera, phylum:Chordata, phylum:Mollusca, 
-            phylum:Annelida, phylum:Bryozoa, phylum:Chaetognatha, phylum:Echinodermata, phylum:Ciliophora, phylum:Phoronida, 
-            phylum:Cnidaria, phylum:Nematoda, phylum:Platyhelminthes, phylum:Ctenophora, phylum:Foraminifera, phylum:Nemertea, phylum:Miozoa, 
-
+                'Data are collected within the following marine ecoregions: http://marineregions.org/mrgid/2401, http://marineregions.org/mrgid/2374, http://marineregions.org/mrgid/2379'
+        # taxonomicCoverage: 
+        #     Phylum:
+        #     - Arthropoda
+        #     - Protozoa
+        #     - Rotifera
+        #     - Chordata
+        #     - Mollusca 
+        #     - Annelida
+        #     - Bryozoa
+        #     - Chaetognatha
+        #     - Echinodermata
+        #     - Ciliophora
+        #     - Phoronida, 
+        #     - Cnidaria
+        #     - Nematoda
+        #     - Platyhelminthes
+        #     - Ctenophora
+        #     - Foraminifera
+        #     - Nemertea
+        #     - Miozoa
 
     keywordSet: 
         keywords: 
             keyword: 
                 - Samplingevent
         keywordThesaurus: 
-            "GBIF Dataset Type Vocabulary: http://rs.gbif.org/vocabulary/gbif/dataset_type.xml"
+            'GBIF Dataset Type Vocabulary: http://rs.gbif.org/vocabulary/gbif/dataset_type.xml'
 
 
     creator: 
