Specific filter files.

--- a/dwca_config/dwca_phytoplankton_nat.yaml
+++ b/dwca_config/dwca_phytoplankton_nat.yaml
@@ -61,5 +61,5 @@ filters:
         data_in/resources
     files:
         - filters.txt
-        - filters_phytoplankton.txt
+        - filters_phytoplankton_nat.txt
 
