--- a/dwca_config/dwca_zooplankton_nat.yaml
+++ b/dwca_config/dwca_zooplankton_nat.yaml
@@ -63,5 +63,5 @@ filters:
         data_in/resources
     files:
         - filters.txt
-        - filters_zooplankton.txt
+        - filters_zooplankton_nat.txt
 
